d2c-org/ilh-sales/base-objects/main/default/objects/Campaign/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>ILH: Identifies which group user belongs to when assigning campaigns.</description>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>LiveOps</fullName>
            </value>
            <value>
                <fullName>Sutherland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>