d2c-org/ilh-sales/base-objects/main/default/objects/Campaign/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Product2 table indicating which product the Campaign is for. Set by the Sales Planner</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>