d2c-org/ilh-sales/base-objects/main/default/objects/Campaign/fields/ProposedCoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>ProposedCoverageAmount__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>ILH: Proposed Coverage Amount for the product in the campaign.  This value is copied to the opportunity.</description>
    <label>Proposed Coverage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>