d2c-org/ilh-sales/base-objects/main/default/objects/Campaign/fields/TFN__c.field-meta.xml
<CustomField>
    <fullName>TFN__c</fullName>
    <businessOwnerGroup>ILHSalesDataOwner</businessOwnerGroup>
    <description>Toll free number of the incoming call associated to a campaign. This field is set by the Sales Planner.</description>
    <label>TFN</label>
    <type>Phone</type>
</CustomField>