d2c-org/ilh-sales/base-objects/main/default/objects/Campaign/recordTypes/ILHSalesMarketing.recordType-meta.xml
<RecordType>
    <fullName>ILHSalesMarketing</fullName>
    <active>true</active>
    <description>Marketing Campaigns for ILH Sales.  Associated with TFN.</description>
    <label>ILH Marketing</label>
</RecordType>