d2c-org/ilh-sales/base-objects/main/default/objects/Campaign/listViews/All_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>All Campaigns</label>
    <sharedTo>
        <group>ViewILHSales</group>
    </sharedTo>
</ListView>