d2c-org/ilh-sales/base-objects/main/default/objects/Campaign/listViews/AllILHMarketingCampaigns.listView-meta.xml
<ListView>
    <fullName>AllILHMarketingCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Mine</filterScope>
    <label>All ILH Marketing Campaigns</label>
    <sharedTo>
        <group>ViewILHSales</group>
    </sharedTo>
</ListView>